# Hello

./: Character_recognition.ipynb  ocrdeva1111.ipynb
dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7-1/dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7/: CMakeLists.txt
dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7-1/dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7/scripts/: batch_fea.sh  batch_fea.sh~
dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7-1/dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7/src/imageprocessing/: Features.cpp  Features.h
dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7-1/dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7/src/main/: MainProcess.cpp  MainProcess.h  Untitled1.cpp
dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7-1/dev-ocr-gplOCR-65e56fc9271b9784e71e9da2269542afdb8ed7d7/src/util/: DebugManager.cpp  DebugManager.h  ImageAnnotator.cpp  ImageAnnotator.h
